--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 			<button>
 				<img src = "images/search.png">
 		</div>
+
+		<div class = "error">
+			<p>
+				Invalid city name
+			</p>
+		</div>
 		<div class="weather">
 			<img src = "images/rain.png"
 			class = "weather-icon">
@@ -28,5 +34,55 @@
 		</div>
 	</div>
 
+	<script>
+	const apiKy = "b6dc9f064c0bf141bca8d1b6b74f14e0";
+	const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+	
+		const searchBox = document.querySelector(".search input");
+		const searchBtn = document.querySelector(".search button");
+		const weatherIcon = document.querySelector(".weather-icon");
+	
+		async function checkWeather(city) {
+			try {
+				const response = await fetch(`${apiUrl}${city}&appid=${apiKy}`);
+				const data = await response.json();
+	
+				if (response.status == 404) {
+					document.querySelector(".error").style.display = "block";
+					document.querySelector(".weather").style.display = "none";
+				} else {
+					document.querySelector(".city").innerHTML = data.name;
+					document.querySelector(".temp").innerHTML = `${data.main.temp}°C`;
+					document.querySelector(".humidity").innerHTML = `${data.main.humidity}%`;
+					document.querySelector(".wind").innerHTML = `${data.wind.speed} km/h`;
+	
+					// Update weather icon based on conditions
+					const condition = data.weather[0].main;
+					if (condition == "Clouds") {
+						weatherIcon.src = "images/clouds.png";
+					} else if (condition == "Clear") {
+						weatherIcon.src = "images/clear.png";
+					} else if (condition == "Rain") {
+						weatherIcon.src = "images/rain.png";
+					} else if (condition == "Drizzle") {
+						weatherIcon.src = "images/drizzle.png";
+					} else {
+						weatherIcon.src = "images/mist.png";
+					}
+	
+					document.querySelector(".weather").style.display = "block";
+					document.querySelector(".error").style.display = "none";
+				}
+			} catch (error) {
+				console.error("Error fetching weather data:", error);
+				alert("Unable to fetch weather data. Please try again later.");
+			}
+		}
+	
+		searchBtn.addEventListener("click", () => {
+			checkWeather(searchBox.value);
+		});
+	</script>
+	
 </body>
 </html>
